# ddframework

./: .gitignore  pyproject.toml
docs/: state-demo.py
src/ddframework/: __init__.py  __init__.pyi  app.py  app.pyi  autosequence.py  autosequencer.py  bulkrunner.py  cache.py  cache.pyi  camera.py  countdownlabel.py  dynamicsprite.py  gridlayout.py  gridlayout.pyi  msgbroker.py  profiler.py  screengrid.py  splines.py  statemachine.py  statemachine.pyi  textbox.py  textlabel.py  utils.py  world2game.py
src/sampleapp/: __main__.py  compsys.py  globals.py  main.py
src/sampleapp/states/: __init__.py  bannerstate.py  countdown.py  demo.py  game.py  gameover.py  highscores.py  pause.py  splash.py  title.py
tests/: test_autosequence.py  test_autosequencer.py  test_statemachine.py
