[project]
name = "ddframework"
description = "ddframework"
version = "0.0.17"
readme = "README.md"

authors = [
    { name="Michael Lamertz", email="michael.lamertz@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: pygame",
]

dependencies = [
    "pgcooldown",
    "pygame-ce",
    "pyglm",
]

[project.scripts]
sampleapp = "sampleapp.__main__:main"

[project.urls]
homepage = "https://github.com/dickerdackel/ddframework"
bugtracker = "https://github.com/DickerDackel/ddframework/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-rA -s --cov-report term-missing -s"
testpaths = [
    "tests",
]
